--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="intro-text wow slideInLeft">
                         <h1 class="name">Matthew Yates</h1>
                         <br><br>
-                        <span class="skills">Full Stack Web Developer - Aspiring Programmer</span>
+                        <span class="skills">Full Stack Web Developer<br><br>Aspiring Programmer</span>
                     </div>
                 </div>
             </div>
