--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         <div class="modal-body">
                             <h2>Validu</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/Validu2.png" class="img-responsive img-centered" alt="">
+                            <!--<img src="img/portfolio/Validu2.png" class="img-responsive img-centered" alt="">-->
                             <p>Working back end for <a href="http://validu.net">Validu's</a> site was a great experience for developing custom plugins and features for a large scale site.<br><br>My work included: transposing records from a database into a visual display, either through a page or through a generated PDF; creating features that allow users to create/modify records in a database through a web interface; create a server-side service to email individuals upon a criteria-meeting record being submitted to the database via mobile application, as well as an 'auto-flagging' option to mark these database entries for later information processing purposes.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
