--- a/html-carousel/index.html
+++ b/html-carousel/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
     <title>Not So Amazing Webpage</title>
-    <meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=12.0, minimum-scale=.25, user-scalable=yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=20.0, minimum-scale=.25, user-scalable=yes"/>
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="magnific/magnific-popup.css"/>
     <link rel="stylesheet" type="text/css" href="custom-style.css"/>
 </head>
 <body>
 
 <div class="wrapper">
     <div class="custom_car">
-        <div>Content #1<br><img src="images/Mountain.jpg"><br>There would be content here.</div>
-        <div>Content #2<br><img src="images/trees.jpg"><br>There should be content here.</div>
-        <div>Content #3<br><img src="images/Space.jpg"><br>There could be content here.</div>
-        <div>Content #4<br><img src="images/Beach.jpg"><br>There might be content here.</div>
-        <div>Content #5<br><img src="images/Moon.jpg"><br>There shall be content here.</div>
+        <div class="car_slide_1 car_item">Content #1<br><a href="images/Mountain.jpg"><img src="images/Mountain.jpg"></a><br>There would be content here.</div>
+        <div class="car_slide_2 car_item">Content #2<br><a href="images/trees.jpg"><img src="images/trees.jpg"></a><br>There should be content here.</div>
+        <div class="car_slide_3 car_item">Content #3<br><a href="images/Space.jpg"><img src="images/Space.jpg"></a><br>There could be content here.</div>
+        <div class="car_slide_4 car_item">Content #4<br><a href="images/Beach.jpg"><img src="images/Beach.jpg"></a><br>There might be content here.</div>
+        <div class="car_slide_5 car_item">Content #5<br><a href="images/Moon.jpg"><img src="images/Moon.jpg"></a><br>There shall be content here.</div>
     </div>
 </div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
+<script type="text/javascript" src="magnific/jquery.magnific-popup.min.js"></script>
+<script type="text/javascript" src="jquery.zoom.min.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function(){
         $('.custom_car').slick();
+    });
+</script>
+
+<script type="text/javascript">
+    $(document).ready(function(){
+       $('.custom_car').magnificPopup({
+           delegate:'a',
+           type:'image'});
+    });
+</script>
+
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('.mfp-img').zoom({on:'grab'});
     });
 </script>
 
