--- a/index.html
+++ b/index.html
@@ -195,6 +195,26 @@
                     <img src="img/portfolio/Ex.png" class="img-responsive" alt="Circus tent">
                 </a>
             </div>
+            <div class="col-sm-4 portfolio-item wow slideInLeft">
+                <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="img/portfolio/neetchan.png" class="img-responsive" alt="Circus tent">
+                </a>
+            </div>
+            <div class="col-sm-4 portfolio-item wow slideInLeft">
+                <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="img/portfolio/lametech.png" class="img-responsive" alt="Circus tent">
+                </a>
+            </div>
         </div>
     </div>
 </section>
