--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/neetchan.png" class="img-responsive" alt="Circus tent">
+                    <img src="img/portfolio/neetchan.PNG" class="img-responsive" alt="Circus tent">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item wow slideInLeft">
@@ -212,7 +212,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/lametech.png" class="img-responsive" alt="Circus tent">
+                    <img src="img/portfolio/lametech.PNG" class="img-responsive" alt="Circus tent">
                 </a>
             </div>
         </div>
