--- a/index.html
+++ b/index.html
@@ -453,21 +453,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>NeetChan</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/neetchan.PNG" class="img-responsive img-centered" alt="">
+                            <p><a href="http://neetchan.com/">NeetChan</a> is an IT project management system / bug tracker. Its name comes from the abbreviation of NEET, or 'No Education or Employment Training' - whereas NeetChan hopes to make complex IT project management a thing of the past for even the most unqualified folks. The primary focus of the project management system and logic will be influenced by Agile project management styles.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Source:
+                                    <strong><a href="http://neetchan.com">NeetChan</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>August 2017
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>Web Development
                                     </strong>
                                 </li>
                             </ul>
@@ -490,17 +490,18 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Lametech.Online</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/lametech.PNG" class="img-responsive img-centered" alt="">
+                            <p><a href="http://lametech.online/">Lametech.Online</a> provides to be another positive way to communicate with people anonymously over the internet. It has a basic chat room on the home page - the real fun begins on the boards, where users can post image content and reply to others in threads all related to a specific category.</p>
+                            <strong><p>WARNING:</p><p>USER EXPERIENCE MAY VARY. LAMETECH BOARDS OFFER ANONYMOUS INTERACTION, AND THIS INCLUDES THE ABILITY TO SHARE ADULT CONTENT. PLEASE, ONLY VISIT LAMETECH IF YOU ARE AT LEAST 18 YEARS AND AGREE TO SEE ADULT RATED CONTENT!</p></strong>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Source:
+                                    <strong><a href="http://lametech.online/">Lametech.Online</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>May 2017
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -541,7 +542,7 @@
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>Web Development
                                     </strong>
                                 </li>
                             </ul>
